// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QuestionChoices QCM 1`] = `
<View
  testID="question-choices"
>
  <View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-1"
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <View>
            <View
              style={Object {}}
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 17,
                      "fontWeight": "700",
                    }
                  }
                >
                  Play Store
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-2"
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <View>
            <View
              style={Object {}}
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 17,
                      "fontWeight": "700",
                    }
                  }
                >
                  App Store
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-3"
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <View>
            <View
              style={Object {}}
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 17,
                      "fontWeight": "700",
                    }
                  }
                >
                  Apple Store
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "rgba(0, 0, 0, 0.1)",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "overflow": "hidden",
            },
            false,
            Object {
              "flexGrow": 1,
            },
          ]
        }
        testID="question-choice-4"
      >
        <View
          style={
            Object {
              "justifyContent": "flex-start",
              "paddingHorizontal": 24,
              "paddingVertical": 16,
            }
          }
        >
          <View>
            <View
              style={Object {}}
            >
              <Text
                selectable={false}
                style={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#14171A",
                      "fontSize": 17,
                      "fontWeight": "700",
                    }
                  }
                >
                  Pineapple Store
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoices QCM Graphic 1`] = `
<View
  testID="question-choices"
>
  <View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-1"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-1-img"
            />
          </View>
          <View
            style={
              Object {
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              }
            }
          >
            <View>
              <View
                style={Object {}}
              >
                <Text
                  selectable={false}
                  style={
                    Array [
                      Object {},
                      Object {},
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#14171A",
                        "fontSize": 17,
                        "fontWeight": "700",
                      }
                    }
                  >
                    Play Store
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-2"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-2-img"
            />
          </View>
          <View
            style={
              Object {
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              }
            }
          >
            <View>
              <View
                style={Object {}}
              >
                <Text
                  selectable={false}
                  style={
                    Array [
                      Object {},
                      Object {},
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#14171A",
                        "fontSize": 17,
                        "fontWeight": "700",
                      }
                    }
                  >
                    App Store
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderRadius": 3,
                "borderStyle": "solid",
                "borderWidth": 1,
                "overflow": "hidden",
              },
              false,
              Object {
                "flexGrow": 1,
              },
            ]
          }
          testID="question-choice-3"
        >
          <View
            style={
              Object {
                "borderTopLeftRadius": 3,
                "borderTopRightRadius": 3,
                "height": 120,
                "width": "100%",
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "https://api.coorpacademy.com/api-service/medias?url=https://static.coorpacademy.com/content/CoorpAcademy/content-eyrolles/cockpit-eyrolles/default/shutterstock_123603871-1-1545058448041.jpg&h=500&w=500&q=90&m=contain",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 120,
                    "width": "100%",
                  },
                  undefined,
                ]
              }
              testID="question-choice-3-img"
            />
          </View>
          <View
            style={
              Object {
                "justifyContent": "flex-start",
                "paddingHorizontal": 24,
                "paddingVertical": 16,
              }
            }
          >
            <View>
              <View
                style={Object {}}
              >
                <Text
                  selectable={false}
                  style={
                    Array [
                      Object {},
                      Object {},
                    ]
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#14171A",
                        "fontSize": 17,
                        "fontWeight": "700",
                      }
                    }
                  >
                    Apple Store
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoices Unsupported question type 1`] = `null`;
